# gamble_drvb

./: .gitignore  C:\Users\peica\Desktop\gamble_drv\qr_code\b64qr.txt  Cargo.toml  README.md  wta.md
src/: config.yaml  main.rs
